--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_custom_clippers: ^2.1.0
   google_fonts: ^6.2.1
   http: ^1.2.2
+  image_picker: ^1.1.2
   intl: ^0.19.0
   path_provider: ^2.1.4
 
