--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,16 +34,12 @@ dependencies:
   flutter_custom_clippers: ^2.1.0
   google_fonts: ^6.2.1
   http: ^1.2.2
+  http_parser: ^4.1.0
   image_picker: ^1.1.2
   intl: ^0.19.0
   path_provider: ^2.1.4
 
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
