--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,12 @@ dependencies:
     sdk: flutter
   flutter_custom_clippers: ^2.1.0
   google_fonts: ^6.2.1
+  hooks_riverpod: ^2.5.2
   http: ^1.2.2
-  http_parser: ^4.1.0
   image_picker: ^1.1.2
   intl: ^0.19.0
   path_provider: ^2.1.4
+  riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_lints: ^4.0.0
